# zotero-ai-summary

./: .gitignore  README.md  README_zh.md  config.json.bak  config_example.json  map_prompt.txt  paper_summary.js  paper_summary.py  paper_summary_merge.js  paper_summary_zotero.js  parse_server.py  pyproject.toml  reduce_prompt.txt  requirements.txt  search.js  search_qa.js  search_qa_zotero.js  server.py  stuff_prompt.txt  summary.txt  zotero_autoupdate_note.js  zotero_console.js  zotero_export_note.js  zotero_input.js  zotero_merge_annoattaion_summary.js  zotero_note_template.js  zotero_pdf_summary.js  zotero_qa.js  zotero_script.js
docs/: README_en.md
prompt/: map_prompt.txt  qa_prompt.txt  reduce_prompt.txt  review_prompt.txt  stuff_prompt.txt
